<resources>
    /*PAGE ACCUEIL*/
    <string name="app_name">NoWastePING</string>
    <string name="titre_accueil">NoWaste</string>
    <string name="btnInscription">S\'inscrire</string>
    <string name="btnConnect">Se connecter</string>
    <string name="lblMdp">Mot de passe :</string>
    <string name="lblMail">Mail :</string>
    <string name="txtWrong"><![CDATA[Mauvaise combinaison mail & mot de passe]]></string>
    <string name="item_default_name">Nom de l\'article</string>
    <string name="item_default_quant">0</string>
    <string name="btnRetour">Retour</string>
</resources>
